--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-10-08  Michael Natterer  <mitch@gimp.org>
 
+	* app/tools/gimpmeasuretool.c: implement GimpTool::key_press() and
+	cancel the tool on GDK_Escape. Come cleanup.
+
+2004-10-08  Michael Natterer  <mitch@gimp.org>
+
 	Made the text options about two toolbox grid columns smaller.
 	Addresses bug #122862.
 
