--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-10-08  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/apply_lens.c (lens_dialog): invalidate the
+	preview when the toggle buttons are used. Reported by Olivier.
+
+	* app/widgets/gimpview.c: minor cleanup.
+
 2004-10-08  Michael Natterer  <mitch@gimp.org>
 
 	* app/tools/gimpmeasuretool.c: implement GimpTool::key_press() and
