--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-10-08  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/ripple.c: handle the tile parameter identically
+	for preview and final result. Set Edges options insensitive when
+	"Retain tileability" is checked. Reported by Olivier.
+
+2004-10-08  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/apply_lens.c (lens_dialog): invalidate the
 	preview when the toggle buttons are used. Reported by Olivier.
 
