2004-10-08  Kevin Cozens  <kcozens@cvs.gimp.org>
    * tools/authorsgen/contributors: Added my name to the
    list of contributors.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@15036 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-10-08  Kevin Cozens  <kcozens@cvs.gimp.org>
+
+	* tools/authorsgen/contributors: Added my name to the
+	list of contributors.
+
 2004-10-08  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/gimpthumbbox.c: tweaked the text shown while
