--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-10-09  Sven Neumann  <sven@gimp.org>
+
+	* AUTHORS
+	* app/dialogs/authors.h: regenerated. Someone should look into
+	updating the list of contributors for the 2.2 release ...
+
 2004-10-08  Kevin Cozens  <kcozens@cvs.gimp.org>
 
 	* tools/authorsgen/contributors: Added my name to the
