* app/dialogs/dialogs.h: fixed a typo in the double-inclusion guard.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@15041 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-09  DindinX  <dindinx@gimp.org>
+
+	* app/dialogs/dialogs.h: fixed a typo in the double-inclusion guard.
+
 2004-10-09  Sven Neumann  <sven@gimp.org>
 
 	* AUTHORS
@@ -628,7 +632,7 @@
 
 2004-10-03  DindinX  <dindinx@gimp.org>
 
-	* plug-ins/common/destripe.c: ported to GimpAspectPreview.
+	* plug-ins/common/destripe.c: ported to GimpDrawablePreview.
 
 2004-10-03  DindinX  <dindinx@gimp.org>
 
