--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-10-10  DindinX  <dindinx@gimp.org>
+
+	* plug-ins/common/flarefx.c
+	* plug-ins/common/waves.c: cleanups and ported to GimpDrawablePreview.
+
 2004-10-10  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/gimpcontainerview.c (gimp_container_view_lookup):
