* plug-ins/common/vpropagate.c: added a preview.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@15046 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,11 @@
 2004-10-10  DindinX  <dindinx@gimp.org>
 
+	* plug-ins/common/vpropagate.c: added a preview.
+
+2004-10-10  DindinX  <dindinx@gimp.org>
+
 	* plug-ins/common/flarefx.c
-	* plug-ins/common/waves.c: cleanups and ported to GimpDrawablePreview.
+	* plug-ins/common/waves.c: cleanups and ported to GimpAspectPreview.
 
 2004-10-10  Sven Neumann  <sven@gimp.org>
 
