* plug-ins/common/AlienMap2.c: ported to GimpAspectPreview, and some minor   cleanups.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@15047 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-10-10  DindinX  <dindinx@gimp.org>
 
+	* plug-ins/common/AlienMap2.c: ported to GimpAspectPreview, and some
+	minor cleanups.
+
+2004-10-10  DindinX  <dindinx@gimp.org>
+
 	* plug-ins/common/vpropagate.c: added a preview.
 
 2004-10-10  DindinX  <dindinx@gimp.org>
