2004-10-10  Sven Neumann  <sven@gimp.org>
	* libgimpthumb/gimpthumb-utils.c
	* libgimpthumb/gimpthumb-utils.[ch]
	* libgimpthumb/gimpthumbnail.c: added support for local thumbnails
	as introduced by version 0.7 of the thumbnail spec. Untested, but
	at least the API is there.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@15048 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-10-10  Sven Neumann  <sven@gimp.org>
+
+	* libgimpthumb/gimpthumb-utils.c
+	* libgimpthumb/gimpthumb-utils.[ch]
+	* libgimpthumb/gimpthumbnail.c: added support for local thumbnails
+	as introduced by version 0.7 of the thumbnail spec. Untested, but
+	at least the API is there.
+
 2004-10-10  DindinX  <dindinx@gimp.org>
 
 	* plug-ins/common/AlienMap2.c: ported to GimpAspectPreview, and some
