2004-10-11  Sven Neumann  <sven@gimp.org>
	* libgimpthumb/gimpthumb-utils.[ch]
	* libgimpthumb/gimpthumb.def: added an API to delete thumbnails.

	* app/widgets/gimpthumbbox.c (gimp_thumb_box_create_thumbnail):
	when recreating a thumbnail on user request, delete all existing
	thumbnails for it.

	* plug-ins/common/AlienMap2.c: removed unused variable.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@15050 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2004-10-11  Sven Neumann  <sven@gimp.org>
+
+	* libgimpthumb/gimpthumb-utils.[ch]
+	* libgimpthumb/gimpthumb.def: added an API to delete thumbnails.
+
+	* app/widgets/gimpthumbbox.c (gimp_thumb_box_create_thumbnail):
+	when recreating a thumbnail on user request, delete all existing
+	thumbnails for it.
+
+	* plug-ins/common/AlienMap2.c: removed unused variable.
+
 2004-10-10  Sven Neumann  <sven@gimp.org>
 
 	* libgimpthumb/gimpthumb-utils.[ch]
