2004-10-11  Sven Neumann  <sven@gimp.org>
	* app/batch.c: clarified.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@15052 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-11  Sven Neumann  <sven@gimp.org>
+
+	* app/batch.c: clarified.
+
 2004-10-08  Kevin Cozens  <kcozens@cvs.gimp.org>
 
 	* configure.in: removed duplicate GETTEXT_PACKAGE line.
