Updated italian translation
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@15053 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-11  Marco Ciampa  <ciampix@libero.it>
+
+	* it.po: updated italian translation.
+
 2004-10-10  Nikos Charonitakis  <charosn@her.forthnet.gr>
 
 	* el.po: Updated Greek translation.
