Updated italian translation
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@15054 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-11  Marco Ciampa  <ciampix@libero.it>
+
+	* it.po: updated italian translation.
+
 2004-10-07  Michael Natterer  <mitch@gimp.org>
 
 	* POTFILES.in: gz.c and bz2.c are now compressor.c
