2004-10-11  Sven Neumann  <sven@gimp.org>
	* libgimpthumb/gimpthumbnail.c: ooops, forgot to disable the debug
	output again.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@15056 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-10-11  Sven Neumann  <sven@gimp.org>
 
+	* libgimpthumb/gimpthumbnail.c: ooops, forgot to disable the debug
+	output again.
+
+2004-10-11  Sven Neumann  <sven@gimp.org>
+
 	* app/batch.c: clarified.
 
 2004-10-08  Kevin Cozens  <kcozens@cvs.gimp.org>
