2004-10-11  Michael Natterer  <mitch@gimp.org>
	* tools/authorsgen/contributors: added missing contributors.
	Thanks to Kevin Cozens for going through ChangeLog and making a list.

	* AUTHORS
	* app/dialogs/authors.h: regenerated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@15057 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/AUTHORS
+++ b/AUTHORS
@@ -32,6 +32,7 @@ Stanislav Brabec
 Robert Brady
 Hans Breuer
 Simon Budig
+Joao S. O. Bueno
 Carey Bunks
 Seth Burgess
 Brent Burton
@@ -60,9 +61,11 @@ Morton Eriksen
 Larry Ewing
 Nick Fetchak
 Valek Filippov
+Shlomi Fish
 David Forsyth
 Raphael Francois
 Jochen Friedrich
+Jordi Gay
 Sami Gerdt
 Jim Geuther
 Graeme Gill
@@ -70,8 +73,10 @@ Pedro Gimeno
 Scott Goehring
 Heiko Goller
 Marcelo de Gomensoro Malheiros
+David Gowers
 Cameron Gregory
 Pavel Grinfeld
+Dov Grobgeld
 Michael Hammel
 Henrik Hansen
 Ville Hautamaki 
@@ -80,6 +85,7 @@ Eric Hernes
 David Hodson
 Christoph Hoegl
 Wolfgang Hofer
+Alan Horkan
 Jan Hubicka 
 Andreas Hyden
 Ben Jackson
@@ -87,16 +93,20 @@ Krzysztof Jakubowski
 Simon Janes
 Tim Janik
 Fellmann Joaquim
+Roman Joost
+Geert Jordaens
 Andrew Kieschnick
 Peter Kirchgessner
 Philipp Klaus
 David Koblas
+Daniel Kobras
 OEyvind Kolaas 
 Robert L Krawitz
 Tuomas Kuosmanen
 Karin Kylander
 Olof S Kylander
 Karl La Rocca
+Philip Lafleur
 Chris Lahey
 Nick Lamb
 Marco Lamberto
@@ -140,6 +150,7 @@ Tim Newsome
 Erik Nygren
 Miles O'Neal
 David Odin 
+Robert Oegren 
 Thom van Os
 Garry R. Osgood
 Alan Paeth
@@ -149,6 +160,7 @@ Ville Patsi
 Asbjorn Pettersen
 Mike Phillips
 Artur Polaczynski
+Ari Pollak
 Raphael Quinet 
 Tom Rathborne
 Vincent Renardias
@@ -164,10 +176,12 @@ John Schlag
 Norbert Schmitz
 Thorsten Schnier
 Alexander Schulz
+Michael Schumacher
 Tracy Scott
 Craig Setera
 Aaron Sherman
 Manish Singh
+William Skaggs
 Daniel Skarda
 Carol Spears
 Adam Spiers
@@ -182,6 +196,8 @@ Owen Taylor
 Ian Tester
 Andy Thomas
 Kevin Turner
+Brion Vibber
+Helvetix Victorinox
 Rebecca Walter
 Martin Weber
 James Wang
