2004-10-11  Sven Neumann  <sven@gimp.org>
	* app/widgets/gimpfiledialog.c: construct a case-insensitive glob
	pattern to use when filtering for file extensions.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@15059 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-10-11  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimpfiledialog.c: construct a case-insensitive glob
+	pattern to use when filtering for file extensions.
+
 2004-10-11  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpthumbbox.c (gimp_thumb_box_create_thumbnails):
