--- a/po-script-fu/sv.po
+++ b/po-script-fu/sv.po
@@ -4,14 +4,14 @@
 # Jan Morén <jan.moren@lucs.lu.se>, 2003.
 # Tomas Ögren <stric@ing.umu.se>, 2001.
 #
-# $Id: sv.po,v 1.72 2004/11/01 00:01:53 neo Exp $
+# $Id: sv.po,v 1.73 2004/11/02 05:30:01 JanneM Exp $
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: gimp-script-fu\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-10-31 23:20+0100\n"
-"PO-Revision-Date: 2004-10-26 21:56+0900\n"
+"POT-Creation-Date: 2004-11-02 14:28+0900\n"
+"PO-Revision-Date: 2004-11-02 14:31+0900\n"
 "Last-Translator: Jan Morén <jan.moren@lucs.lu.se>\n"
 "Language-Team: Swedish <sv@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -197,9 +197,8 @@ msgid "Searching - please wait"
 msgstr "Söker - var vänlig vänta"
 
 #: plug-ins/dbbrowser/gimpprocbrowser.c:425
-#, fuzzy
 msgid "1 Procedure"
-msgstr "%d procedurer"
+msgstr "1 procedur"
 
 #: plug-ins/dbbrowser/gimpprocbrowser.c:427
 #, c-format
