--- a/po-plug-ins/de.po
+++ b/po-plug-ins/de.po
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: GIMP 2.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-11-02 15:36+0100\n"
-"PO-Revision-Date: 2004-11-02 16:39+0100\n"
+"PO-Revision-Date: 2004-11-02 17:04+0100\n"
 "Last-Translator: Hendrik Brandt <eru@gmx.li>\n"
 "Language-Team: German <gnome-de@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -8747,8 +8747,7 @@ msgstr "_Gfig..."
 msgid ""
 "Error trying to save figure as a parasite: can't attach parasite to "
 "drawable.\n"
-msgstr "Fehler beim Versuch die Abbildung als Parasit zu speichern: Parasit konnte nicht "
-"mit Bild verbunden werden."
+msgstr "Fehler beim Versuch die Abbildung als Parasit zu speichern: Parasit konnte nicht mit Bild verbunden werden.\n"
 
 #: plug-ins/gfig/gfig.c:744
 #, c-format
@@ -10710,7 +10709,7 @@ msgstr "_Labyrinth..."
 msgid "Drawing Maze..."
 msgstr "Zeichne Labyrinth..."
 
-#. $Id: de.po,v 1.165 2004/11/02 15:40:22 hebra Exp $
+#. $Id: de.po,v 1.166 2004/11/02 16:04:23 mitch Exp $
 #: plug-ins/maze/maze.h:2
 msgid "Maze"
 msgstr "Labyrinth"
