2004-11-07  Sigurd Gartmann  <sigurd-translate@brogar.org>
	* configure.in: Added support for the new bokmÃ¥l locale Â«nbÂ» to
	ALL_LINGUAS.

	* po/no.po
	* po/nb.po
	* po-libgimp/no.po
	* po-libgimp/nb.po
	* po-plug-ins/no.po
	* po-plug-ins/nb.po
	* po-script-fu/no.po
	* po-script-fu/nb.po: Added the new nb bokmÃ¥l translation.
	Updated norwegian bokmÃ¥l translation.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@15501 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-plug-ins/nb.po
+++ b/po-plug-ins/nb.po
@@ -11179,7 +11179,7 @@ msgstr "Tegner labyrint..."
 msgid "Drawing Maze..."
 msgstr "Tegner labyrint..."
 
-#. $Id: no.po,v 1.105 2004/11/07 16:50:33 sigurd Exp $
+#. $Id: nb.po,v 1.2 2004/11/07 16:50:33 sigurd Exp $
 #: plug-ins/maze/maze.h:2
 #, fuzzy
 msgid "Maze"
